# ibkr-flex-mcp

./: .env.example  Cargo.toml  README.md  deny.toml
.cargo-husky/hooks/: pre-commit
.github/workflows/: auto-tag.yml  ci.yml  release.yml
src/: lib.rs  main.rs  mcp.rs
src/flex/: mod.rs  parse.rs  positions.rs  transport.rs
tests/: flex_flow.rs  live_flex.rs  transport_http.rs
